# 2048_DRL

./: .gitignore  CMakeLists.txt  GameState.c  GameState.h  NeuralNetwork.c  NeuralNetwork.h  Queue.c  Queue.h  README.md  driver.c  q_learning.c  requirements.txt  test.c
[DEPRECATED]code/: CMakeLists.txt  GameState.c  driver.c
[DEPRECATED]code/include/: NeuralNetwork.h
[DEPRECATED]code/rs_2048_drl/src/: main.rs
code/: 2048.py  CMakeLists.txt  DQNAgent.py  GameState.c  GameState.h  NeuralNetwork.c  NeuralNetwork.h  Queue.c  Queue.h  agent.py  demo.ipynb  driver.c  env.py  episode_data.xlsx  game.py  git_pull.py  model.py  model_OLD.py  model_weights.pth  output.txt  play_2048.py  q_learning.h  replay_buffer.py  state.py  test.ipynb  test.py  train.ipynb  train_2048.py  train_2048_OLD.py  training_functions.py
code/data/: lr_schd_demo_version.pth
code/python/: 2048.py  game.py  game_state.py  main.py  output.txt  play_2048.py  state.py
code/rs_2048_drl/: Cargo.toml
code/rs_2048_drl/src/: game.rs  game_state.rs  main.rs
episode_data/: episode_data_1.xlsx  episode_data_2.xlsx  episode_data_3.xlsx  episode_data_4.xlsx  episode_data_5.xlsx
